changes to use httpapi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   
-  <ul *ngFor="let item of data$ | async">
+  <!-- <ul *ngFor="let item of data$ | async">
     <li>{{ item.Description }}</li>
-  </ul>
+  </ul> -->
   <router-outlet></router-outlet>
 
 </body>
